--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,7 @@ trim_trailing_whitespace = true
 ; Tab indentation (no size specified)
 [*.js]
 indent_style = tab
+trim_trailing_whitespace = true
 
 [*.php]
 indent_style = tab
