--- a/.editorconfig
+++ b/.editorconfig
@@ -19,5 +19,9 @@ trim_trailing_whitespace = true
 indent_style = tab
 trim_trailing_whitespace = true
 
+[*.html]
+indent_style = tab
+trim_trailing_whitespace = true
+
 [*.php]
 indent_style = tab
